package Builder_Composite;

public interface IRecipeBook { //component
    Pizza pizza = new Pizza();
    void Display();
}
