@startuml

title __BUILDER_COMPOSITE's Class Diagram__\n

  namespace Builder {
    namespace Composite {
      class Builder_Composite.BuilderPizza {
          + Build()
          + addCheese()
          + addCrust()
          + addDough()
          + addMagic()
          + addName()
          + addSize()
          + addToppings()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      interface Builder_Composite.IRecipeBook {
          {static} + pizza : Pizza
          {abstract} + Display()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      class Builder_Composite.Pizza {
          + cheese : List<Cheese>
          + magic : List<Magic>
          + name : String
          + toppings : List<Toppings>
          + Pizza()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      class Builder_Composite.PrepareMethod {
          {static} - instance : PrepareMethod
          + getMethod()
          {static} + getPreparationMethod()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      class Builder_Composite.Recipe {
          + Display()
          + Recipe()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      class Builder_Composite.RecipeBook {
          - Recipes : List<IRecipeBook>
          - name : String
          + Display()
          + RecipeBook()
          + addRecipe()
          + removeRecipe()
      }
    }
  }
  

  namespace Builder {
    namespace Composite {
      class Builder_Composite.Runner {
          {static} + main()
      }
    }
  }
  

  Builder_Composite.BuilderPizza o-- Builder_Composite.Pizza : pizza
  Builder_Composite.Pizza o-- Singleton.Enum.Crust : crust
  Builder_Composite.Pizza o-- Singleton.Enum.Dough : dough
  Builder_Composite.Pizza o-- Singleton.Enum.Size : size
  Builder_Composite.Recipe .up.|> Builder_Composite.IRecipeBook
  Builder_Composite.Recipe o-- Builder_Composite.Pizza : pizza
  Builder_Composite.RecipeBook .up.|> Builder_Composite.IRecipeBook
  Builder_Composite.RecipeBook o-- Builder_Composite.Pizza : pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
